--- a/Index.html
+++ b/Index.html
@@ -4,33 +4,19 @@
         <meta charset= "UTF-8"/>
 <title>RUN BUDDY</title>
 <link rel="stylesheet" href="./assets/css/style.css"/>
-
     </head>
-    
+
     <body>
        <header>
   <h1>
-  <a href="/">
-    RUN BUDDY
-</a>
+  <a href="/">RUN BUDDY</a>
        </h1>
        <nav>
-        <!-- Unordered list element-->
         <ul>
-            <!-- List item element-->
-            <li>
-                <!-- Anchor element-->
-                <a href="#what-we-do">What We Do</a>
-            </li>
-            <li>
-            <a href="#what-you-do">What You Do</a>    
-            </li>
-            <li>
-                <a href="#your-trainers">Your Trainers</a>
-            </li>
-            <li>
-                <a href="#reach-out"> Reach Out</a>
-            </li>
+            <li> <a href="#what-we-do">What We Do</a></li>
+            <li><a href="#what-you-do">What You Do</a></li>
+            <li><a href="#your-trainers">Your Trainers</a></li>
+            <li><a href="#reach-out"> Reach Out</a></li>
         </ul>
  </nav>
        </header> 
@@ -68,7 +54,6 @@
     </form>
     </div>
        </section>
-
             <section id="what-we-do" class="intro">
                 <h2 class="section-title primary-border"> What We Do</h2>
 <p>
@@ -95,13 +80,11 @@
 <h3> Step 2:<span> Consult with One of Our Trainers.</span></h3>
 <p> Are you here to build muscle, lose weight, or just feel good?</p>
 </div>
-
 <div>
     <img src="./assets/images/step-3.svg" alt="">
     <h3>Step 3: <span> Get Running.</span> </h3>
     <p> Hit the ground running (literally) once your trainer lays out your plan.</p>
     </div>
-
        <div>
         <img src="./assets/images/step-4.svg" alt="">
         <h3> Step 4: <span>See Results. </span></h3>
@@ -109,15 +92,12 @@
        </div>
 </section>
 
-
 <!-- NEXT SECTION-->
-
 <section>
     <section id="your-trainers" class="trainers">
         <h2 class="section-title primary-border">
             Meet the Trainers</h2>
 </section>
-
 <article class="trainer">
 <img src="./assets/trainers/trainer-1.jpg" alt="Arron Stephens in his workout clothes, ready to pump iron"/>
 <div class="trainer-bio text-left">
@@ -141,7 +121,6 @@
         </div>
         <img src="./assets/trainers/trainer-2.jpg" alt="Joanna Gill cooling off after a workout"/>
     </article>
-
     <article class="trainer">
         <img src="./assets/trainers/trainer-3.jpg" alt="Harry Smith Wearing a lifting comically small pink weights"/>
         <div class="trainer-bio text-left">
@@ -153,44 +132,14 @@
                 voluptatibus suscipit amet quis repellat!</p> 
          </div> 
     </article>
-
-
 <section id="reach-out" class="contact">
     <h2 class="section-title secondary-border"> Reach Out</h2>
     <div class="contact-info">
-        <inframe src= "https://goo.gl/maps/JkoX9coFAYV7HwyXA"
-        width="400"
-        height="400"
-        style="border: 0;"
-        allowfullscreen=""
-        loading="Lazy">
-    </inframe>
-    </div>
-
-    <div>
-
-      <!--  <iframe src="https://goo.gl/maps/KeQoQNywzRL4ARhq8"
-        width=600 
-        height=450 
-        frameborder=0 
-        style= border:0;
-        allowfullscreen=""
-         aria-hidden="false" 
-         tabindex="0">
-        </iframe>
-
-      <inframe class="google">
-        <img src="https://goo.gl/maps/KeQoQNywzRL4ARhq8"/>
-        <div class="google"> </div>
-        </inframe>-->
-<inframe>
-        <div class="map-responsive">
-            <iframe src="https://www.google.com/maps/dir/38.8830207,-77.2205718//@38.8738835,-77.2060235,15z" 
-            width="600"
-            height="450" 
-            frameborder= "0"
+            <iframe 
+            src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3147.1079747227936!2d-120.42364418397035!3d37.92790791110593!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x8090c49129b6ac57%3A0xb56c7eb95a2cd8bd!2sMain%20St%2C%20California%2095327!5e0!3m2!1sen!2sus!4v1616426329495!5m2!1sen!2sus"
             style="border:0" 
-            allowfullscreen="">
+            allowfullscreen=""
+            loading="lazy">
         </iframe>
 
             </div>
@@ -207,7 +156,6 @@
             </address>
     </div>
 </section>
-
 </section>
         <footer>
             <h2> ❤️ Made with Love by Run Buddy. </h2>
